# MarketAPIServer

./: .gitignore  Cargo.toml  README.md  db.sqlite  rustfmt.toml  sqlx-data.json
.github/workflows/: pre-release.yml  tagged-release.yml  test.yml
migrations/: 20210416020832_init.sql  20210506124624_fix_trader_price_data.sql  20220725195230_add_price_data_flea_market_sell_for.sql  20220725203451_add_price_data_flea_market_fee.sql  20220725221428_add_price_data_last_low_price.sql  20220831211427_init.sql  20241104201856_auth.sql
migrations/2020-04-04-142302_init/: down.sql  up.sql
public/: resourceEditor.html
src/: config.rs  db.rs  lib.rs  main.rs  schema.rs  service.rs  state.rs
src/db/: models.rs
src/fetch/: mod.rs  models.rs
src/server/: endpoints.rs  error.rs  middlewares.rs  mod.rs  models.rs  recover.rs  routes.rs  service.rs  state.rs  util.rs
tests/: integration.rs  missing_auth.rs  resources.rs  util.rs
