[package]
name = "market-api-server"
version = "0.1.0"
authors = ["Blightbuster <blight.developer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web
warp = "0.3.1"
reqwest = { version = "0.11.3", features = ["json"] }

# db
sqlx = { version = "0.5.7", features = ["runtime-tokio-native-tls", "sqlite"] }

# log
log = "0.4.8"
env_logger = "0.8.3"

# other
tokio = { version = "1.11.0", features = ["full"] }
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.50"
dotenv = "0.15.0"
chrono = { version = "0.4.11", features = ["serde"] }
thiserror = "1.0.14"
flate2 = "1.0.14"
dashmap = "4.0.2"
rust-embed = "5.5.1"
percent-encoding = "2.1.0"
bytes = "1.0.1"

[dev-dependencies]
serial_test = "0.5.1"

[profile.dev.package."*"]
opt-level = 3
